--- a/index.html
+++ b/index.html
@@ -219,9 +219,8 @@
   </p>
 
   <p class="mt-4">
-    📧 Email: <strong>namakamu@email.com</strong><br>
-    📸 Instagram: <strong>@namakamu</strong><br>
-    🎨 Behance: <strong>behance.net/namakamu</strong>
+    📧 Email: <strong>2511072@students.universitasmulia.ac.id</strong><br>
+    📸 Instagram: <strong>@dellin_lin</strong><br>
   </p>
 </section>
 
@@ -233,7 +232,7 @@
 <!-- FOOTER -->
 <footer class="text-center py-3 bg-teal text-white d-flex justify-content-center align-items-center gap-2">
   <img src="https://via.placeholder.com/30x30?text=L" alt="Logo Footer" />
-  <span>© 2025 [Nama Kamu] — Creative Portfolio</span>
+  <span>© 2025 Dellin Intan Puspita Yuliana — Creative Portfolio</span>
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
@@ -302,4 +301,5 @@ document.addEventListener('click', (e) => {
 
 </body>
 </html>
+
 
