--- a/index.html
+++ b/index.html
@@ -47,17 +47,15 @@
   <div class="container pt-5">
     <div class="row align-items-center">
       <div class="col-lg-6">
-        <h1 class="fw-bold">Halo, Selamat Datang! 👋</h1>
+        <h1 class="fw-bold">Welcome to this space 🤍</h1>
         <p class="mt-3">
-          Saya seorang perempuan yang mencintai dunia desain, ilustrasi, dan fotografi.
-          Melalui website ini, saya berbagi karya, cerita, dan proses kreatif yang lahir dari
-          imajinasi dan sudut pandang saya terhadap dunia.
+          I am a woman who loves the world of design, illustration, and photography.
+          Through this space, I share works and stories shaped by imagination and my perspective on the world.
         </p>
         <p>
-          Setiap desain memiliki makna, setiap gambar bercerita, dan setiap foto menyimpan
-          momen berharga.
+        Every design holds meaning, every illustration tells a story, and every photograph preserves a precious moment.
         </p>
-        <p class="fw-semibold">Mari jelajahi karya-karya saya ✨</p>
+        <p class="fw-semibold">Explore my creations ✨</p>
       </div>
       <div class="col-lg-6 text-center">
         <img src="https://via.placeholder.com/350" class="img-fluid rounded" alt="Hero Image" />
@@ -70,39 +68,41 @@
 <section id="about" class="container my-5">
   <h2 class="text-center mb-4">About Me</h2>
   <p class="text-center">
-    Nama saya <strong>[Nama Kamu]</strong>, seorang kreator visual yang memiliki ketertarikan besar
-    pada desain grafis, menggambar, dan fotografi.
+   My name is<strong>Dellin Intan Puspita yuliana</strong>, a visual creator with a strong interest in graphic design, illustration, and photography.
   </p>
   <p class="text-center">
-    Sejak kecil, saya suka menuangkan ide ke dalam bentuk visual. Mulai dari coretan sederhana,
-    berkembang menjadi desain digital dan fotografi yang merekam emosi, warna, serta cerita di balik
-    setiap objek.
+    Through visual works, I express the way I see and feel the world. 
+    Every image presented here carries meaning, emotion, and a story—communicated quietly through form, color, and composition.
+    </p>
+  <p class="text-center">
+    This website is a space where I showcase finished visual works, a collection of images that capture moments, 
+    feelings, and beauty in their own way.
   </p>
 
   <div class="row mt-4 text-center">
     <div class="col-md-4">
       <div class="feature-card">
         🎨
-        <h5 class="mt-2">Desain Grafis</h5>
+        <h5 class="mt-2">Visual Design</h5>
       </div>
     </div>
     <div class="col-md-4">
       <div class="feature-card">
         ✏️
-        <h5 class="mt-2">Ilustrasi & Menggambar</h5>
+        <h5 class="mt-2">Illustration & Sketching</h5>
       </div>
     </div>
     <div class="col-md-4">
       <div class="feature-card">
         📸
-        <h5 class="mt-2">Fotografi</h5>
+        <h5 class="mt-2">Fine Art Photography</h5>
         <small>(Portrait & Street)</small>
       </div>
     </div>
   </div>
 
   <p class="text-center mt-4 fst-italic">
-    “Bagi saya, seni adalah cara untuk berbicara tanpa kata.”
+    “For me, art is a way of speaking without words.”
   </p>
 </section>
 
@@ -113,17 +113,17 @@
   <div class="row g-4" id="blogContainer">
     <div class="col-md-4 blog-item" data-keywords="menemukan diri lewat desain desain estetika karya">
       <div class="feature-card">
-        <h5>Menemukan Diri Lewat Desain</h5>
+        <h5>Finding Myself Through Design</h5>
         <p>
-          Desain bukan hanya tentang estetika, tetapi juga tentang menyampaikan pesan.
-          Setiap karya yang saya buat adalah cerminan perasaan dan pengalaman.
+        Design is not only about aesthetics, but also about conveying meaning.
+        Every piece I create is a reflection of emotions and experiences.
         </p>
       </div>
     </div>
 
     <div class="col-md-4 blog-item" data-keywords="menggambar sebagai terapi garis warna menenangkan emosi">
       <div class="feature-card">
-        <h5>Menggambar sebagai Terapi</h5>
+        <h5>Drawing as Therapy</h5>
         <p>
           Menggambar membantu saya menenangkan pikiran.
           Garis dan warna menjadi ruang bebas untuk mengekspresikan emosi.
@@ -301,5 +301,6 @@ document.addEventListener('click', (e) => {
 
 </body>
 </html>
+
 
 
