--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Portofolio Kreatif</title>
+  <title>Art Portfolio</title>
 
   <!-- Bootstrap 5 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -24,14 +24,15 @@
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <div class="collapse navbar-collapse" id="navMenu">
-    <ul class="navbar-nav ms-auto me-3">
-      <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
-      <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-      <li class="nav-item"><a class="nav-link" href="#blog">Blog</a></li>
-      <li class="nav-item"><a class="nav-link" href="#gallery">Gallery</a></li>
-      <li class="nav-item"><a class="nav-link" href="#contact">Kontak</a></li>
-    </ul>
+<div class="collapse navbar-collapse" id="navMenu">
+  <ul class="navbar-nav ms-auto me-3">
+    <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
+    <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+    <li class="nav-item"><a class="nav-link" href="#blog">Blog</a></li>
+    <li class="nav-item"><a class="nav-link" href="#gallery">Gallery</a></li>
+    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+  </ul>
+</div>
 
     <!-- FORM SEARCH -->
     <form class="d-flex my-2 my-lg-0 position-relative" role="search" autocomplete="off">
@@ -68,7 +69,7 @@
 <section id="about" class="container my-5">
   <h2 class="text-center mb-4">About Me</h2>
   <p class="text-center">
-   My name is<strong>Dellin Intan Puspita yuliana</strong>, a visual creator with a strong interest in graphic design, illustration, and photography.
+   My name is <strong>Dellin Intan Puspita yuliana</strong>, a visual creator with a strong interest in graphic design, illustration, and photography.
   </p>
   <p class="text-center">
     Through visual works, I express the way I see and feel the world. 
@@ -124,41 +125,41 @@
     <div class="col-md-4 blog-item" data-keywords="menggambar sebagai terapi garis warna menenangkan emosi">
       <div class="feature-card">
         <h5>Drawing as Therapy</h5>
-        <p>
-          Menggambar membantu saya menenangkan pikiran.
-          Garis dan warna menjadi ruang bebas untuk mengekspresikan emosi.
-        </p>
-      </div>
-    </div>
+       <p>
+  Drawing helps me calm my mind.
+  Lines and colors become a free space to express emotions.
+</p>
+</div>
+</div>
 
-    <div class="col-md-4 blog-item" data-keywords="fotografi menangkap momen sederhana senyum cahaya">
-      <div class="feature-card">
-        <h5>Fotografi: Menangkap Momen Sederhana</h5>
-        <p>
-          Saya percaya bahwa keindahan bisa ditemukan dalam hal kecil—
-          senyum, cahaya senja, atau langkah kaki di jalan sepi.
-        </p>
-      </div>
-    </div>
+<div class="col-md-4 blog-item" data-keywords="photography capturing simple moments smile light">
+  <div class="feature-card">
+    <h5>Photography: Capturing Simple Moments</h5>
+    <p>
+      I believe beauty can be found in small things—
+      a smile, the glow of sunset light, or footsteps on a quiet street.
+    </p>
   </div>
+</div>
+</div>
 </section>
 
 <!-- GALLERY -->
 <section id="gallery" class="container my-5">
-  <h2 class="text-center mb-4">Gallery Karya</h2>
+  <h2 class="text-center mb-4">Works Gallery</h2>
 
   <div class="row g-3" id="galleryContainer">
-    <div class="col-6 col-md-3 gallery-item" data-keywords="karya 1 desain ilustrasi">
-      <img src="https://via.placeholder.com/300x200?text=Karya+1" alt="Karya 1" class="img-fluid rounded gallery-img" data-bs-toggle="modal" data-bs-target="#galleryModal" data-bs-slide-to="0">
+    <div class="col-6 col-md-3 gallery-item" data-keywords="work 1 design illustration">
+      <img src="https://via.placeholder.com/300x200?text=Work+1" alt="Work 1" class="img-fluid rounded gallery-img" data-bs-toggle="modal" data-bs-target="#galleryModal" data-bs-slide-to="0">
     </div>
-    <div class="col-6 col-md-3 gallery-item" data-keywords="karya 2 fotografi portrait">
-      <img src="https://via.placeholder.com/300x200?text=Karya+2" alt="Karya 2" class="img-fluid rounded gallery-img" data-bs-toggle="modal" data-bs-target="#galleryModal" data-bs-slide-to="1">
+    <div class="col-6 col-md-3 gallery-item" data-keywords="work 2 photography portrait">
+      <img src="https://via.placeholder.com/300x200?text=Work+2" alt="Work 2" class="img-fluid rounded gallery-img" data-bs-toggle="modal" data-bs-target="#galleryModal" data-bs-slide-to="1">
     </div>
-    <div class="col-6 col-md-3 gallery-item" data-keywords="karya 3 ilustrasi digital">
-      <img src="https://via.placeholder.com/300x200?text=Karya+3" alt="Karya 3" class="img-fluid rounded gallery-img" data-bs-toggle="modal" data-bs-target="#galleryModal" data-bs-slide-to="2">
+    <div class="col-6 col-md-3 gallery-item" data-keywords="work 3 digital illustration">
+      <img src="https://via.placeholder.com/300x200?text=Work+3" alt="Work 3" class="img-fluid rounded gallery-img" data-bs-toggle="modal" data-bs-target="#galleryModal" data-bs-slide-to="2">
     </div>
-    <div class="col-6 col-md-3 gallery-item" data-keywords="karya 4 fotografi jalanan">
-      <img src="https://via.placeholder.com/300x200?text=Karya+4" alt="Karya 4" class="img-fluid rounded gallery-img" data-bs-toggle="modal" data-bs-target="#galleryModal" data-bs-slide-to="3">
+    <div class="col-6 col-md-3 gallery-item" data-keywords="work 4 street photography">
+      <img src="https://via.placeholder.com/300x200?text=Work+4" alt="Work 4" class="img-fluid rounded gallery-img" data-bs-toggle="modal" data-bs-target="#galleryModal" data-bs-slide-to="3">
     </div>
   </div>
 </section>
@@ -171,16 +172,16 @@
         <div id="carouselGallery" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="https://via.placeholder.com/800x500?text=Karya+1" class="d-block w-100" alt="Karya 1">
+              <img src="https://via.placeholder.com/800x500?text=Work+1" class="d-block w-100" alt="Work 1">
             </div>
             <div class="carousel-item">
-              <img src="https://via.placeholder.com/800x500?text=Karya+2" class="d-block w-100" alt="Karya 2">
+              <img src="https://via.placeholder.com/800x500?text=Work+2" class="d-block w-100" alt="Work 2">
             </div>
             <div class="carousel-item">
-              <img src="https://via.placeholder.com/800x500?text=Karya+3" class="d-block w-100" alt="Karya 3">
+              <img src="https://via.placeholder.com/800x500?text=Work+3" class="d-block w-100" alt="Work 3">
             </div>
             <div class="carousel-item">
-              <img src="https://via.placeholder.com/800x500?text=Karya+4" class="d-block w-100" alt="Karya 4">
+              <img src="https://via.placeholder.com/800x500?text=Work+4" class="d-block w-100" alt="Work 4">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselGallery" data-bs-slide="prev">
@@ -200,11 +201,11 @@
 <!-- NEWSLETTER -->
 <section id="newsletter" class="newsletter text-center py-5 bg-pink text-white">
   <div class="container">
-    <h2>Subscribe Newsletter</h2>
-    <p class="mb-4">Dapatkan update terbaru tentang karya dan blog saya.</p>
+    <h2>Subscribe to the Newsletter</h2>
+    <p class="mb-4">Get the latest updates about my works and blog.</p>
 
     <form class="d-flex justify-content-center flex-wrap" role="form">
-      <input type="email" class="form-control w-auto me-2 mb-2" placeholder="Masukkan email Anda" required>
+      <input type="email" class="form-control w-auto me-2 mb-2" placeholder="Enter your email" required>
       <button type="submit" class="btn btn-teal mb-2">Subscribe</button>
     </form>
   </div>
@@ -212,10 +213,10 @@
 
 <!-- CONTACT -->
 <section id="contact" class="newsletter text-center py-5">
-  <h2>Kontak</h2>
+  <h2>Contact</h2>
   <p class="mt-3">
-    Ingin berkolaborasi atau sekadar menyapa?<br>
-    Saya senang terhubung dengan sesama pecinta seni 🤍
+    Interested in collaborating or just saying hello?<br>
+    I’d love to connect with fellow art lovers 🤍
   </p>
 
   <p class="mt-4">
@@ -224,83 +225,9 @@
   </p>
 </section>
 
-<!-- LIVE CHAT WhatsApp -->
-<a href="https://wa.me/62895369172060" target="_blank" rel="noopener" class="live-chat" title="Chat via WhatsApp">
-  💬
-</a>
-
 <!-- FOOTER -->
 <footer class="text-center py-3 bg-teal text-white d-flex justify-content-center align-items-center gap-2">
-  <img src="https://via.placeholder.com/30x30?text=L" alt="Logo Footer" />
+  <img src="https://via.placeholder.com/30x30?text=L" alt="Footer Logo" />
   <span>© 2025 Dellin Intan Puspita Yuliana — Creative Portfolio</span>
 </footer>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-
-<script>
-// Gallery Lightbox slide
-const galleryImages = document.querySelectorAll('.gallery-img');
-const carousel = document.getElementById('carouselGallery');
-galleryImages.forEach((img, index) => {
-  img.addEventListener('click', () => {
-    const carouselInstance = bootstrap.Carousel.getOrCreateInstance(carousel);
-    carouselInstance.to(index);
-  });
-});
-
-// Search Autocomplete + Live Filter
-const searchInput = document.getElementById('searchInput');
-const suggestionBox = document.getElementById('searchSuggestions');
-const searchKeywords = [
-  "Desain Grafis","Ilustrasi","Fotografi","Blog","Karya","Tutorial",
-  "Portfolio","Tips Desain","Fotografi Jalanan","Sketch"
-];
-
-function filterContent(query) {
-  const blogItems = document.querySelectorAll('.blog-item');
-  const galleryItems = document.querySelectorAll('.gallery-item');
-  const q = query.toLowerCase();
-
-  blogItems.forEach(item => {
-    const keywords = item.dataset.keywords.toLowerCase();
-    item.style.display = keywords.includes(q) ? '' : 'none';
-  });
-
-  galleryItems.forEach(item => {
-    const keywords = item.dataset.keywords.toLowerCase();
-    item.style.display = keywords.includes(q) ? '' : 'none';
-  });
-}
-
-searchInput.addEventListener('input', () => {
-  const query = searchInput.value;
-  filterContent(query);
-
-  // Autocomplete
-  suggestionBox.innerHTML = '';
-  if(query.length === 0) return;
-  const filtered = searchKeywords.filter(item => item.toLowerCase().includes(query));
-  filtered.forEach(item => {
-    const div = document.createElement('div');
-    div.classList.add('list-group-item');
-    div.textContent = item;
-    div.addEventListener('click', () => {
-      searchInput.value = item;
-      suggestionBox.innerHTML = '';
-      filterContent(item);
-    });
-    suggestionBox.appendChild(div);
-  });
-});
-
-// Klik di luar untuk tutup suggestion
-document.addEventListener('click', (e) => {
-  if(!searchInput.contains(e.target)) suggestionBox.innerHTML = '';
-});
-</script>
-
-</body>
-</html>
-
-
 
