--- a/index.html
+++ b/index.html
@@ -225,9 +225,94 @@
   </p>
 </section>
 
+<!-- LIVE CHAT WhatsApp -->
+<a href="https://wa.me/62895369172060" target="_blank" rel="noopener" class="live-chat" title="Chat via WhatsApp">
+  💬
+</a>
+  
 <!-- FOOTER -->
 <footer class="text-center py-3 bg-teal text-white d-flex justify-content-center align-items-center gap-2">
   <img src="https://via.placeholder.com/30x30?text=L" alt="Footer Logo" />
   <span>© 2025 Dellin Intan Puspita Yuliana — Creative Portfolio</span>
 </footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
+<script>
+// Gallery Lightbox slide
+const galleryImages = document.querySelectorAll('.gallery-img');
+const carousel = document.getElementById('carouselGallery');
+galleryImages.forEach((img, index) => {
+  img.addEventListener('click', () => {
+    const carouselInstance = bootstrap.Carousel.getOrCreateInstance(carousel);
+    carouselInstance.to(index);
+  });
+});
+
+// Search Autocomplete + Live Filter
+const searchInput = document.getElementById('searchInput');
+const suggestionBox = document.getElementById('searchSuggestions');
+const searchKeywords = [
+  "Graphic Design",
+  "Illustration",
+  "Photography",
+  "Blog",
+  "Works",
+  "Tutorial",
+  "Portfolio",
+  "Design Tips",
+  "Street Photography",
+  "Sketch"
+];
+
+function filterContent(query) {
+  const blogItems = document.querySelectorAll('.blog-item');
+  const galleryItems = document.querySelectorAll('.gallery-item');
+  const q = query.toLowerCase();
+
+  blogItems.forEach(item => {
+    const keywords = item.dataset.keywords.toLowerCase();
+    item.style.display = keywords.includes(q) ? '' : 'none';
+  });
+
+  galleryItems.forEach(item => {
+    const keywords = item.dataset.keywords.toLowerCase();
+    item.style.display = keywords.includes(q) ? '' : 'none';
+  });
+}
+
+searchInput.addEventListener('input', () => {
+  const query = searchInput.value;
+  filterContent(query);
+
+  // Autocomplete suggestions
+  suggestionBox.innerHTML = '';
+  if (query.length === 0) return;
+
+  const filtered = searchKeywords.filter(item =>
+    item.toLowerCase().includes(query.toLowerCase())
+  );
+
+  filtered.forEach(item => {
+    const div = document.createElement('div');
+    div.classList.add('list-group-item');
+    div.textContent = item;
+    div.addEventListener('click', () => {
+      searchInput.value = item;
+      suggestionBox.innerHTML = '';
+      filterContent(item);
+    });
+    suggestionBox.appendChild(div);
+  });
+});
+
+// Click outside to close suggestions
+document.addEventListener('click', (e) => {
+  if (!searchInput.contains(e.target)) suggestionBox.innerHTML = '';
+});
+</script>
+
+</body>
+</html>
+
 
