Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <!-- NAVBAR -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-teal px-4 fixed-top">
   <a class="navbar-brand fw-bold d-flex align-items-center" href="#home">
-    <img src="https://share.google/4BQHyk0I2bTB3Cpbx" class="me-2 logo-img" />
+    <img src="https://share.google/4BQHyk0I2bTB3Cpbx" class="logo-img" />
     MyPortfolio
   </a>
 
@@ -314,6 +314,7 @@ document.addEventListener('click', (e) => {
 
 </body>
 </html>
+
 
 
 
