--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <!-- NAVBAR -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-teal px-4 fixed-top">
   <a class="navbar-brand fw-bold d-flex align-items-center" href="#home">
-    <img src="https://share.google/4BQHyk0I2bTB3Cpbx" class="logo-img" />
+    <img src="https://via.placeholder.com/40x40?text=Logo" alt="Logo" class="logo">
     MyPortfolio
   </a>
 
@@ -59,7 +59,7 @@
         <p class="fw-semibold">Explore my creations ✨</p>
       </div>
       <div class="col-lg-6 text-center">
-        <img src="https://via.placeholder.com/350" class="img-fluid rounded" alt="Hero Image" />
+        <img src="https://via.placeholder.com/350" class="Hero" alt="Hero Image"/>
       </div>
     </div>
   </div>
@@ -314,6 +314,7 @@ document.addEventListener('click', (e) => {
 
 </body>
 </html>
+
 
 
 
