--- a/index.html
+++ b/index.html
@@ -172,16 +172,16 @@
         <div id="carouselGallery" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="https://via.placeholder.com/800x500?text=Work+1" class="d-block w-100" alt="Work 1">
+              <img src="https://via.placeholder.com/800x500?text=Work+1" class="Work 1" alt="Work 1">
             </div>
             <div class="carousel-item">
-              <img src="https://via.placeholder.com/800x500?text=Work+2" class="d-block w-100" alt="Work 2">
+              <img src="https://via.placeholder.com/800x500?text=Work+2" class="Work 2" alt="Work 2">
             </div>
             <div class="carousel-item">
-              <img src="https://via.placeholder.com/800x500?text=Work+3" class="d-block w-100" alt="Work 3">
+              <img src="https://via.placeholder.com/800x500?text=Work+3" class="Work 3 alt="Work 3">
             </div>
             <div class="carousel-item">
-              <img src="https://via.placeholder.com/800x500?text=Work+4" class="d-block w-100" alt="Work 4">
+              <img src="https://via.placeholder.com/800x500?text=Work+4" class="Work 4" alt="Work 4">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselGallery" data-bs-slide="prev">
@@ -314,6 +314,7 @@ document.addEventListener('click', (e) => {
 
 </body>
 </html>
+
 
 
 
